--- a/2019-11-05.md
+++ b/2019-11-05.md
@@ -102,7 +102,7 @@
       name:"cat",
       say:say
     }
-    var name = 'animal'
+    var name = 'animal';
   	setTimeout(obj.foo,100)
   2、显示绑定bind、call、apply
   3、new绑定
